--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 				
 					<footer id="footer">
-						<span class="copyright">&copy; 2018. Design: <a href="http://html5up.net">HTML5 UP</a>. Powered by <a href="https://www.gohugo.io/">Hugo.</a></span>
+						<span class="copyright">&copy; 2018<a href="http://www.drshishu.com"> Shi Shu</a>.  Theme by <a href="https://github.com/sethmacleod/aerial">Seth MacLeod</a>. Powered by <a href="https://www.gohugo.io/">Hugo</a>. Hosted by <a href="https://github.com/">Github</a> Pages．</span>
 					</footer>
 
 			</div>
